k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-circle
  namespace: book-circle
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - book-circle.syscraft906.dev
      secretName: book-circle-tls
  rules:
    - host: book-circle.syscraft906.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: book-circle
                port:
                  number: 80
